Add: find, create, update and read notification in module notifications & integrate notification in module friends and messages
